tests/fail/array_borrow_aliasing.tk
import std/io::println

fn main() -> i32 {
    auto arr#: [i32; 3] = [1, 2, 3]
    auto &y = &arr[0]
    
    arr[0] = 20 // EXPECT: error[E0442]:
    
    println("y is {}", y)
    return 0
}
